<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".activity.LoginActivity">

    <include
        layout="@layout/activity_back_icon"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <EditText
                android:id="@+id/new_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_user"
            android:layout_marginLeft="-40dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_password"
            android:layout_marginLeft="-40dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <AutoCompleteTextView
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeActionId="@+id/email"
                android:imeActionLabel="@string/action_register_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/ic_email"
            android:layout_marginLeft="-42dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


    <Button
        android:id="@+id/register"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_start_login"
        android:text="@string/action_register"
        android:layout_margin="16dp"
        android:textSize="16dp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

</LinearLayout>
