<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".activity.LoginActivity">

<!--    <Button
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="0dp"
        android:background="@drawable/ic_left_black"/>-->
<include
    layout="@layout/activity_back_icon"/>
    <!-- Login progress -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <AutoCompleteTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_user"
            android:layout_marginLeft="-40dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_password"
            android:layout_marginLeft="-40dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


    <Button
        android:id="@+id/sign_in"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_start_login"
        android:text="@string/action_sign_in"
        android:layout_margin="16dp"
        android:textSize="16dp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

</LinearLayout>
